重构代码逻辑，替换对象转换; 修改新增、编辑逻辑，添加重复检查； 修改controller接口返回结果和异常处理